--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,10 @@
-/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
 
 html {
   color: #222;
   font-size: 1em;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Customize the background color to match your design.
- */
 
-::-moz-selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
-
-::selection {
-  background: #b3d4fc;
-  text-shadow: none;
-}
 
 /*
  * A better looking default horizontal rule
@@ -47,47 +20,6 @@ hr {
 }
 
 /*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-  vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-  border: 0;
-  margin: 0;
-  padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-  resize: vertical;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
  * Hide visually and from screen readers
  */
 
@@ -96,14 +28,6 @@ textarea {
   display: none !important;
 }
 
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
 
 .visually-hidden {
   border: 0;
@@ -158,6 +82,42 @@ textarea {
 
 .clearfix::after {
   clear: both;
+}
+
+@font-face {
+  font-family: 'LINESeedKR';
+  src: url('../font/eot/LINESeedKR-Th.eot'); /* IE9 Compat Modes */
+  src: url('../font/eot/LINESeedKR-Th.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../font/woff2/LINESeedKR-Th.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../font/woff/LINESeedKR-Th.woff') format('woff'); /* Pretty Modern Browsers */
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'LINESeedKR';
+  src: url('../font/eot/LINESeedKR-Rg.eot');
+  src: url('../font/eot/LINESeedKR-Rg.eot?#iefix') format('embedded-opentype'),
+  url('../font/woff2/LINESeedKR-Rg.woff2') format('woff2'),
+  url('../font/woff/LINESeedKR-Rg.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'LINESeedKR';
+  src: url('../font/eot/LINESeedKR-Bd.eot');
+  src: url('../font/eot/LINESeedKR-Bd.eot?#iefix') format('embedded-opentype'),
+  url('../font/woff2/LINESeedKR-Bd.woff2') format('woff2'),
+  url('../font/woff/LINESeedKR-Bd.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Apply the font to body or specific elements */
+body {
+  font-family: 'LINESeedKR', sans-serif;
+  font-weight: 400; /* Regular weight by default */
 }
 
 /* ==========================================================================
@@ -268,6 +228,10 @@ h1, h2, h3, h4, h5, p, span {
   margin-block-end: 0;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -283,9 +247,6 @@ ul {
 
 li {
   line-height: 2;
-  @media (max-width: 768px) {
-    padding: 0.1rem 0;
-  }
 }
 
 .page-container {
@@ -294,6 +255,9 @@ li {
   margin: 0 auto;
 }
 
+.jd-section-gap {
+  gap: 3rem;
+}
 
 .link-icon::before {
   content: "🔗";
@@ -321,13 +285,6 @@ li {
   display: flex;
   align-items: start;
   gap: 3rem;
-
-  @media (max-width: 768px) {
-    padding-top: 2rem;
-    border-top: 1px solid #e2e8f0;
-    flex-direction: column;
-    gap:1.5rem;
-  }
 }
 
 .highlight {
@@ -391,30 +348,24 @@ li {
 .title {
   font-size: 2em;
   font-weight: 700;
-  @media (max-width: 768px) {
-    font-size: 1rem;
-  }
+}
+
+.description {
+  font-size: 1.3em;
+  line-height: 1.8;
 }
 
 .resume-title-flex {
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: start;
-  }
+  display: flex;
+  align-items: center;
 }
 
 .company-title {
   font-weight: 600;
-  @media (max-width: 768px) {
-    font-size: 2rem;
-  }
 }
 
 .education-title {
   width: 185px;
-  @media (max-width: 768px) {
-    width: 100%;
-  }
 }
 
 .cursor-pointer {
@@ -436,7 +387,6 @@ li {
 .blog-link:hover {
   color: #222;
 }
-
 
 .tech-stack {
   display: flex;
@@ -503,4 +453,83 @@ li {
 .text-theme-hover:hover {
   color: #0A98FF;
   transition: color 0.5s;
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 3em 1.4em;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  ul {
+    padding-left: 1rem;
+  }
+
+  li {
+      padding: 0.1rem 0;
+  }
+
+
+  .jd-container {
+      padding-top: 2rem;
+      border-top: 1px solid #e2e8f0;
+      flex-direction: column;
+      gap:1.5rem;
+  }
+
+
+  .resume-title-flex {
+    flex-direction: column;
+    align-items: start;
+  }
+
+
+  .company-title, .education-title {
+    width: 100%;
+  }
+
+  .company-title {
+    font-size: 2rem;
+  }
+
+  .job-title {
+    font-size: 1.5rem;
+  }
+
+  .jd-section-gap {
+    gap: 1.2rem;
+  }
+
+  .title, .description  {
+      font-size: 1rem;
+  }
+
+  .tech-stack {
+    flex-direction: column;
+    align-items: start;
+  }
+}
+
+@media (max-width: 360px) {
+  p, span,a {
+    font-size: 0.9rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2{
+    font-size: 1.3rem;
+  }
+
+  ul {
+    padding-left: 0.5rem;
+  }
+
+  li {
+    padding: 0 0;
+  }
 }
